--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "better-auth": "^1.4.18",
+    "drizzle-orm": "^0.45.1",
     "lucide-vue-next": "^0.563.0",
     "nuxt": "^4.3.0",
+    "postgres": "^3.4.8",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@nuxt/fonts": "^0.13.0"
+    "@nuxt/fonts": "^0.13.0",
+    "drizzle-kit": "^0.31.8"
   }
 }
