--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-vue-next": "^0.563.0",
     "nuxt": "^4.3.0",
     "postgres": "^3.4.8",
+    "resend": "^6.9.1",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
