--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "better-auth": "^1.4.18",
+    "buffer": "^6.0.3",
     "drizzle-orm": "^0.45.1",
     "lucide-vue-next": "^0.563.0",
     "nuxt": "^4.3.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@nuxt/fonts": "^0.13.0",
-    "drizzle-kit": "^0.31.8"
+    "drizzle-kit": "^0.31.8",
+    "vite-plugin-node-polyfills": "^0.25.0"
   }
 }
