--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "better-auth": "^1.4.18",
     "buffer": "^6.0.3",
+    "chart.js": "^4.5.1",
     "drizzle-orm": "^0.45.1",
     "lucide-vue-next": "^0.563.0",
     "nuxt": "^4.3.0",
@@ -20,6 +21,7 @@
     "resend": "^6.9.1",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
