--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-auth": "^1.4.18",
     "buffer": "^6.0.3",
     "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
     "lucide-vue-next": "^0.563.0",
     "nuxt": "^4.3.0",
