--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/genai": "^1.41.0",
     "@google/generative-ai": "^0.24.1",
+    "@nuxtjs/color-mode": "^4.0.0",
     "@tailwindcss/vite": "^4.1.18",
     "better-auth": "^1.4.18",
     "buffer": "^6.0.3",
