--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "@nuxtjs/color-mode": "^4.0.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@vite-pwa/nuxt": "^1.1.1",
     "better-auth": "^1.4.18",
     "buffer": "^6.0.3",
     "chart.js": "^4.5.1",
